Fixes for broken styles

--- a/ckanext/digitizationknowledge_theme/assets/scss/_nav.scss
+++ b/ckanext/digitizationknowledge_theme/assets/scss/_nav.scss
@@ -77,7 +77,9 @@
         white-space: nowrap;
     }
 }
-
+.item-count.badge {
+    color:white;
+}
 
 .module-narrow .nav-item>a,
 .module-narrow .nav-aside li a {
