--- a/ckanext/digitizationknowledge_theme/assets/styles/main.css
+++ b/ckanext/digitizationknowledge_theme/assets/styles/main.css
@@ -10630,6 +10630,10 @@ a.tag:hover {
   white-space: nowrap;
 }
 
+.item-count.badge {
+  color: white;
+}
+
 .module-narrow .nav-item > a,
 .module-narrow .nav-aside li a {
   padding-left: 15px;
@@ -11425,22 +11429,6 @@ select[data-module=autocomplete] {
   padding-bottom: 0;
 }
 
-.dataset-content {
-  position: relative;
-  padding-bottom: 20px;
-  margin-bottom: 20px;
-}
-.dataset-content:before {
-  display: block;
-  content: "";
-  position: absolute;
-  height: 1px;
-  width: 100%;
-  bottom: 0;
-  left: 0;
-  border-bottom: 1px solid #e5e5e5;
-}
-
 .dataset-heading {
   font-size: 16px;
   margin-top: 0;
@@ -11467,6 +11455,21 @@ select[data-module=autocomplete] {
 }
 .dataset-private.pull-right {
   margin-right: 0;
+}
+
+.dataset-resources-wrapper {
+  padding-top: 20px;
+  position: relative;
+}
+.dataset-resources-wrapper:before {
+  display: block;
+  content: "";
+  position: absolute;
+  height: 1px;
+  width: 100%;
+  top: 0;
+  left: 0;
+  border-bottom: 1px solid #e5e5e5;
 }
 
 .dataset-resources__top {
@@ -11602,9 +11605,6 @@ select[data-module=autocomplete] {
   border: 1px solid var(--badge-color);
   --badge-color:#11131E;
   color: var(--badge-color);
-}
-.badge:hover {
-  background: var(--badge-color);
 }
 
 .badge[data-format=html],
